Mengubah nama universitas index.html

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="twelve columns">
           <h1>Muhammad Ishak Jaelani.</h1>
 
-          <p>Mahasiswa Universitas Halu Oleo</p>
+          <p>Mahasiswa Universitas Multimedia Nusantara</p>
 
           <h5>Time Left Until Launching</h5>
 
