Mengubah nama index.html

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
       <div id="main" class="row">
         <div class="twelve columns">
-          <h1>Muhammad Ishak Jaelani.</h1>
+          <h1>Aldi Hidayat.</h1>
 
           <p>Mahasiswa Universitas Multimedia Nusantara</p>
 
