--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="twelve columns">
           <h1>Muhammad Ishak Jaelani</h1>
 
-          <p>Mahasiswa Universitas Multimedia Nusantara</p>
+          <p>Mahasiswa Universitas Indonesia</p>
 
           <h5>Sisa waktu yang digunakan</h5>
 
