Mengubah sisa waktu

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
           <p>Mahasiswa Universitas Multimedia Nusantara</p>
 
-          <h5>Time Left Until Launching</h5>
+          <h5>Sisa waktu yang digunakan</h5>
 
           <div id="counter" class="cf">
             <span>134 <em>days</em></span>
